--- a/.github/workflows/python-sdk-0.0.2.yml
+++ b/.github/workflows/python-sdk-0.0.2.yml
@@ -28,41 +28,14 @@ jobs:
         run: |
           python3 -m coverage run -m pytest
 
-  report-build-status:
-     runs-on: ubuntu-latest
-     needs: build
-     steps:
-       - name: Report Custom Build Status
-         run: |
-          if python3 -m coverage report -m; then
-            STATUS="success"
-          else
-            STATUS="failure"
-          fi
-          
-          if [ "$STATUS" == "success" ]; then
-            STATE="success"
-          else
-            STATE="failure"
-          fi
-     
-  deploy:
-    runs-on: ubuntu-latest
-    # needs: build
-    steps:
+      - name : Generate Coverage Report
+        run: |
+          python3 -m coverage report -m
+
       - name: Generating distribution archives
         run: |
           python setup.py sdist
           python setup.py bdist_wheel
-
-      # - name : Generate Coverage Report
-      #   run: |
-      #     python3 -m coverage report -m
-
-      # - name: Generating distribution archives
-      #   run: |
-      #     python setup.py sdist
-      #     python setup.py bdist_wheel
 
       # - name: Publish to PyPI
       #   env:
