--- a/.github/workflows/python-sdk-0.0.2.yml
+++ b/.github/workflows/python-sdk-0.0.2.yml
@@ -31,11 +31,20 @@ jobs:
       - name : Generate Coverage Report
         run: |
           python3 -m coverage report -m
-
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
       - name: Generating distribution archives
         run: |
           python setup.py sdist
           python setup.py bdist_wheel
+
+      # - name: Generating distribution archives
+      #   run: |
+      #     python setup.py sdist
+      #     python setup.py bdist_wheel
 
       # - name: Publish to PyPI
       #   env:
