--- a/.github/workflows/python-sdk-0.0.2.yml
+++ b/.github/workflows/python-sdk-0.0.2.yml
@@ -1,8 +1,8 @@
 name: Python package
-on: [push]
-# on:
-#   release:
-#     types: [published]
+#on: [push]
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -40,12 +40,6 @@ jobs:
         run: |
           python setup.py sdist
           python setup.py bdist_wheel
-
-      # - name: Generating distribution archives
-      #   run: |
-      #     python setup.py sdist
-      #     python setup.py bdist_wheel
-
       # - name: Publish to PyPI
       #   env:
       #     TWINE_USERNAME: __token__
