--- a/.github/workflows/python-sdk-0.0.2.yml
+++ b/.github/workflows/python-sdk-0.0.2.yml
@@ -1,8 +1,8 @@
 name: Python package
-#on: [push]
-on:
-  release:
-    types: [published]
+on: [push]
+# on:
+#   release:
+#     types: [published]
 
 jobs:
   build:
@@ -31,15 +31,34 @@ jobs:
       - name : Generate Coverage Report
         run: |
           python3 -m coverage report -m
+
   deploy:
     runs-on: ubuntu-latest
-    needs: build
     steps:
-      - uses: actions/checkout@v4
-      - name: Generating distribution archives
-        run: |
-          python setup.py sdist
-          python setup.py bdist_wheel
+    - uses: actions/checkout@v3
+    - name: Set up Python
+      uses: actions/setup-python@v3
+      with:
+        python-version: '3.11' # the python version your want to build and upload your package with
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install build
+    - name: Build package
+      run: python -m build
+    # - name: Publish new distributions to PyPI
+    #   uses: pypa/gh-action-pypi-publish@release/v1
+    #   with:
+    #     password: ${{ secrets.PYPI_API_TOKEN }}
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Generating distribution archives
+  #       run: |
+  #         python setup.py sdist
+  #         python setup.py bdist_wheel
       # - name: Publish to PyPI
       #   env:
       #     TWINE_USERNAME: __token__
