--- a/.github/workflows/python-sdk-0.0.2.yml
+++ b/.github/workflows/python-sdk-0.0.2.yml
@@ -1,8 +1,8 @@
 name: Python package
-on: [push]
-# on:
-#   release:
-#     types: [published]
+#on: [push]
+on:
+  release:
+    types: [published]
 
 jobs:
   build:
@@ -34,6 +34,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v3
     - name: Set up Python
@@ -50,6 +51,7 @@ jobs:
     #   uses: pypa/gh-action-pypi-publish@release/v1
     #   with:
     #     password: ${{ secrets.PYPI_API_TOKEN }}
+
   # deploy:
   #   runs-on: ubuntu-latest
   #   needs: build
