--- a/.github/workflows/python-sdk-0.0.2.yml
+++ b/.github/workflows/python-sdk-0.0.2.yml
@@ -1,8 +1,8 @@
 name: Python package
-#on: [push]
-on:
-  release:
-    types: [published]
+on: [push]
+#on:
+ # release:
+  #  types: [published]
 
 jobs:
   build:
